.kube/deploy.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  namespace: ${NAMESPACE}
  labels:
    app: ${CI_PROJECT_NAME}-${CI_COMMIT_REF_SLUG}
  name: ${CI_PROJECT_NAME}-${CI_COMMIT_REF_SLUG}
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: ${CI_PROJECT_NAME}-${CI_COMMIT_REF_SLUG}
    spec:
      containers:
        - name: ${CI_PROJECT_NAME}-${CI_COMMIT_REF_SLUG}
          image: "${REGISTRY}/app/${CI_PROJECT_NAME}:${CI_COMMIT_REF_SLUG}-${CI_PIPELINE_ID}"
          imagePullPolicy: IfNotPresent
          command: ["sh"]
          args: ["/opt/start.sh"]
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 100m
              memory: 256Mi
          volumeMounts:
            - name: ${CI_PROJECT_NAME}-${CI_COMMIT_REF_SLUG}-storage
              mountPath: /db
          ports:
            - containerPort: 8000
              name: django
          readinessProbe:
            tcpSocket:
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 5
      volumes:
        - name: ${CI_PROJECT_NAME}-${CI_COMMIT_REF_SLUG}-storage
          persistentVolumeClaim:
            claimName: ${CI_PROJECT_NAME}-${CI_COMMIT_REF_SLUG}-claim
