.kube/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${CI_PROJECT_NAME}-${CI_COMMIT_REF_SLUG}-svc
  namespace: ${NAMESPACE}
spec:
  ports:
    - name: ${CI_PROJECT_NAME}
      port: 8000
      protocol: TCP
      targetPort: 8000
  selector:
    app: ${CI_PROJECT_NAME}-${CI_COMMIT_REF_SLUG}
